# wordCountThreads

./: CMakeLists.txt  LICENSE.md  README.md  conf.ini  main.cpp
inc/: t_measure.h  threaded_counter.h
src/: threaded_counter.cpp
